@@ -1,0 +1,58 @@
+			
+INCLUDE_DIRECTORIES(
+${BULLET_PHYSICS_SOURCE_DIR}/LinearMath ${BULLET_PHYSICS_SOURCE_DIR}/Bullet }
+)
+	
+ADD_LIBRARY(BULLET_COLLISION 
+				BroadphaseCollision/AxisSweep3.cpp
+				BroadphaseCollision/BroadphaseProxy.cpp
+				BroadphaseCollision/CollisionAlgorithm.cpp
+				BroadphaseCollision/Dispatcher.cpp
+				BroadphaseCollision/OverlappingPairCache.cpp
+				BroadphaseCollision/SimpleBroadphase.cpp
+				CollisionDispatch/CollisionDispatcher.cpp
+				CollisionDispatch/CollisionObject.cpp
+				CollisionDispatch/CollisionWorld.cpp
+				CollisionDispatch/CompoundCollisionAlgorithm.cpp
+				CollisionDispatch/ConvexConcaveCollisionAlgorithm.cpp
+				CollisionDispatch/ConvexConvexAlgorithm.cpp
+				CollisionDispatch/EmptyCollisionAlgorithm.cpp
+				CollisionDispatch/ManifoldResult.cpp
+				CollisionDispatch/SimulationIslandManager.cpp
+				CollisionDispatch/UnionFind.cpp
+				CollisionShapes/BoxShape.cpp
+				CollisionShapes/BvhTriangleMeshShape.cpp
+				CollisionShapes/CollisionShape.cpp
+				CollisionShapes/CompoundShape.cpp
+				CollisionShapes/ConcaveShape.cpp
+				CollisionShapes/ConeShape.cpp
+				CollisionShapes/ConvexHullShape.cpp
+				CollisionShapes/ConvexShape.cpp
+				CollisionShapes/ConvexTriangleMeshShape.cpp
+				CollisionShapes/CylinderShape.cpp
+				CollisionShapes/EmptyShape.cpp
+				CollisionShapes/MinkowskiSumShape.cpp
+				CollisionShapes/MultiSphereShape.cpp
+				CollisionShapes/OptimizedBvh.cpp
+				CollisionShapes/PolyhedralConvexShape.cpp
+				CollisionShapes/Simplex1to4Shape.cpp
+				CollisionShapes/SphereShape.cpp
+				CollisionShapes/StaticPlaneShape.cpp
+				CollisionShapes/StridingMeshInterface.cpp
+				CollisionShapes/TriangleCallback.cpp
+				CollisionShapes/TriangleIndexVertexArray.cpp
+				CollisionShapes/TriangleMesh.cpp
+				CollisionShapes/TriangleMeshShape.cpp
+				NarrowPhaseCollision/ContinuousConvexCollision.cpp
+				NarrowPhaseCollision/ConvexCast.cpp
+				NarrowPhaseCollision/GjkConvexCast.cpp
+				NarrowPhaseCollision/GjkPairDetector.cpp
+				NarrowPhaseCollision/Hull.cpp
+				NarrowPhaseCollision/ManifoldContactAddResult.cpp
+				NarrowPhaseCollision/MinkowskiPenetrationDepthSolver.cpp
+				NarrowPhaseCollision/PersistentManifold.cpp
+				NarrowPhaseCollision/RaycastCallback.cpp
+				NarrowPhaseCollision/Shape.cpp
+				NarrowPhaseCollision/SubSimplexConvexCast.cpp
+				NarrowPhaseCollision/VoronoiSimplexSolver.cpp
+)
